[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Tokens/Token.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Volcano.gd" type="Script" id=2]
[ext_resource path="res://ParticleEffects/LavaRocks.tscn" type="PackedScene" id=3]

[node name="Volcano" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]

region_rect = Rect2( 144, 96, 16, 16 )

[node name="LavaRocks" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 1.16824e-006, -6 )
lifetime = 1.5
randomness = 0.0

[node name="TimeToDie" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="ColorTween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="TimeToDie" to="." method="_on_TimeToDie_timeout"]


